MOBILE-2103 grades: Fix grade width on small tablets

--- a/www/core/components/grades/scss/styles.scss
+++ b/www/core/components/grades/scss/styles.scss
@@ -60,7 +60,7 @@
   .itemcenter {
     @extend .item;
     padding: 10px;
-    white-space: nowrap;
+    white-space: normal;
   }
   .feedbacktext {
     padding-left: 10px;
